Affichage plus fin de l'alignement victorieux + correction bug logique

--- a/tp/tp13_morpion/morpion.css
+++ b/tp/tp13_morpion/morpion.css
@@ -93,4 +93,5 @@ footer {
     width: 60%;
     text-align: center;
     font-weight: bold;
+    font-size: 32px;
 }
